tests/reference/asr-matrix_matmul_03-a99cdd1.stderr
semantic error: matmul accepts second matrix of type Logical if first matrix is of Logical type
 --> tests/errors/matrix_matmul_03.f90:5:24
  |
5 |     print *, matmul(a, b)
  |                        ^ 
